# Collaborative-Sorting

./: README.md
catkin_ws/src/action_pr2/: CMakeLists.txt  mainpage.dox  manifest.xml
catkin_ws/src/action_pr2/src/: pr2.cpp
catkin_ws/src/action_pr2/src/action_pr2/srv/: _ExecuteCartesianTrajectory.py  __init__.py
catkin_ws/src/action_pr2/srv_gen/cpp/include/action_pr2/: ExecuteCartesianTrajectory.h
catkin_ws/src/action_pr2/srv_gen/lisp/: ExecuteCartesianTrajectory.lisp  _package.lisp  _package_ExecuteCartesianTrajectory.lisp  action_pr2-srv.asd
catkin_ws/src/drive_base_tutorial/: CMakeLists.txt  manifest.xml
catkin_ws/src/drive_base_tutorial/src/: drive_base.cpp
catkin_ws/src/euro_pallet/launch/: euro_pallet.launch
catkin_ws/src/ik_trajectory_tutorial/: CMakeLists.txt  mainpage.dox  manifest.xml
catkin_ws/src/ik_trajectory_tutorial/launch/: ik_trajectory_tutorial.launch
catkin_ws/src/ik_trajectory_tutorial/scripts/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_ik_trajectory_tutorial.cpp  test_ik_trajectory_tutorial.py
catkin_ws/src/ik_trajectory_tutorial/src/: ik_trajectory_tutorial.cpp
catkin_ws/src/kinematics_msgs/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/levelManager/launch/: lego_world.launch
catkin_ws/src/levelManager/worlds/: changed_scene.world
catkin_ws/src/navigation_oru-release/: lego_world.launch
catkin_ws/src/simple_gripper/: CMakeLists.txt  frames.gv  mainpage.dox  manifest.xml
catkin_ws/src/simple_gripper/src/: simple_gripper.cpp
catkin_ws/src/simple_trajectory/: CMakeLists.txt  mainpage.dox  manifest.xml
catkin_ws/src/simple_trajectory/src/: simple_trajectory.cpp
catkin_ws/src/vision/scripts/: lego-vision.py
navigation_oru-release/: lego_world.launch
navigation_oru-release/gazebo_oru/gazebo_worlds_oru/launch/: basement_map_server.launch  basement_world_paused.launch
navigation_oru-release/levelManager/launch/: lego_world.launch
navigation_oru-release/levelManager/models/: test.urdf
navigation_oru-release/levelManager/scripts/: levelManager.py
navigation_oru-release/levelManager/worlds/: main_scene.world
navigation_oru-release/motion_planning/scripts/: model_move.py  motion_planning.py
navigation_oru-release/orunav_motion_planner/src/: DiscWorldVisualizer.cpp
navigation_oru-release/orunav_params/config/: citi1_simulation.cfg
(+64 files in other folders)
