<package>
  <name>kinematics_msgs</name>
  <version>1.3.0</version>
  <description>This package provides general-purpose messages and services that can be used for kinematic computation using a ROS interface.</description>
  <maintainer email="sachin@willowgarage.com">Sachin Chitta</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kinematics_msgs</url>

  <author>Sachin Chitta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->

  <export>
  </export>
</package>
